@@ -3,6 +3,8 @@ package algo.backtrack;
 import org.junit.Test;
 
 import java.util.ArrayList;
+import java.util.Deque;
+import java.util.LinkedList;
 import java.util.List;
 
 /**
@@ -24,12 +26,12 @@ public class PermuteTest {
 
     public List<List<Integer>> permute(int[] nums) {
         List<List<Integer>> res = new ArrayList<>();
-        List<Integer> list = new ArrayList<>();
+        Deque<Integer> list = new LinkedList<>();
         backtrack(list, nums, res);
         return res;
     }
 
-    public void backtrack(List<Integer> list, int[] nums, List<List<Integer>> res) {
+    public void backtrack(Deque<Integer> list, int[] nums, List<List<Integer>> res) {
         if (list.size() == nums.length) {
             res.add(new ArrayList<>(list));
             return;
@@ -38,9 +40,9 @@ public class PermuteTest {
             if (list.contains(num)) {
                 continue;
             }
-            list.add(num);
+            list.addLast(num);
             backtrack(list, nums, res);
-            list.remove(list.size() - 1);
+            list.removeLast();
         }
     }
 
